syntax = "proto3";

package protos;

service Messages{
  // Obter a mensagem de resposta
 rpc GetServerResponse(Message) returns (MessageResponse) {}

}

message Message{
 string message = 1;
}

message MessageResponse{
 string message = 1;
}


// Comando do terminal ->
// python -m grpc_tools.protoc --proto_path=. .\protos\message\message.proto --python_out=. --grpc_python_out=.